<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/wallET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wall"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/shelfET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shelf"/>
    <EditText
        android:id="@+id/volumeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/volume"/>
    <EditText
        android:id="@+id/pageET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/page"/>

    <Button
        android:id="@+id/searchBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

    <EditText
        android:id="@+id/countCharsInLinesET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/countCharsInLines"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <TextView
            android:id="@+id/textTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text"
             />
    </ScrollView>

</LinearLayout>